# Tearing_Mode_Solver

./: LICENSE  README.md  delta_prime_solver.py  example_1.ipynb  example_2.ipynb  pyproject.toml
examples/: example_1.ipynb  example_2.ipynb  perturbed_flux_function.ipynb
src/tm_solver/solver/: __init__.py  delta_prime.py
